// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationBar > renders navigation items and user 1`] = `
<div
  class="min-w-min border-b-[4px] border-inactive-gray bg-[#FFFFFFE5]"
>
  <nav
    class="mx-auto flex h-[68px] items-center justify-between gap-4 px-[72px] py-[14px] font-semibold lg:container"
  >
    <div
      class="inline-flex select-none items-center gap-4 text-[24px] leading-[140%] text-accent"
    >
      <div
        class="h-8 w-8 bg-accent"
      />
      JOD
    </div>
    <ul
      class="inline-flex items-center gap-6"
    >
      <li>
        <a
          aria-current="location"
          class="flex items-center gap-3 rounded-lg px-5 py-2 text-accent"
          href="/home"
        >
          <div
            class="h-5 w-5 rounded-full bg-accent"
          />
          Home
        </a>
      </li>
      <li>
        <a
          class="flex items-center gap-3 rounded-lg px-5 py-2 text-primary-gray"
          href="/about"
        >
          About
        </a>
      </li>
      <li>
        <a
          class="flex items-center gap-3 rounded-lg px-5 py-2 text-primary-gray"
          href="/contact"
        >
          Contact
        </a>
      </li>
      <li
        class="ml-6"
      >
        <a
          aria-label="Profile"
          class="flex h-8 w-8 items-center justify-center rounded-full bg-accent text-white"
          href="/profile"
          role="img"
          title="Jane Doe"
        >
          JD
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavigationBar > renders no navigation items and no user 1`] = `
<div
  class="min-w-min border-b-[4px] border-inactive-gray bg-[#FFFFFFE5]"
>
  <nav
    class="mx-auto flex h-[68px] items-center justify-between gap-4 px-[72px] py-[14px] font-semibold lg:container"
  >
    <div
      class="inline-flex select-none items-center gap-4 text-[24px] leading-[140%] text-accent"
    >
      <div
        class="h-8 w-8 bg-accent"
      />
      JOD
    </div>
  </nav>
</div>
`;

exports[`NavigationBar > renders only navigation items 1`] = `
<div
  class="min-w-min border-b-[4px] border-inactive-gray bg-[#FFFFFFE5]"
>
  <nav
    class="mx-auto flex h-[68px] items-center justify-between gap-4 px-[72px] py-[14px] font-semibold lg:container"
  >
    <div
      class="inline-flex select-none items-center gap-4 text-[24px] leading-[140%] text-accent"
    >
      <div
        class="h-8 w-8 bg-accent"
      />
      JOD
    </div>
    <ul
      class="inline-flex items-center gap-6"
    >
      <li>
        <a
          aria-current="location"
          class="flex items-center gap-3 rounded-lg px-5 py-2 text-accent"
          href="/home"
        >
          <div
            class="h-5 w-5 rounded-full bg-accent"
          />
          Home
        </a>
      </li>
      <li>
        <a
          class="flex items-center gap-3 rounded-lg px-5 py-2 text-primary-gray"
          href="/about"
        >
          About
        </a>
      </li>
      <li>
        <a
          class="flex items-center gap-3 rounded-lg px-5 py-2 text-primary-gray"
          href="/contact"
        >
          Contact
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavigationBar > renders only user 1`] = `
<div
  class="min-w-min border-b-[4px] border-inactive-gray bg-[#FFFFFFE5]"
>
  <nav
    class="mx-auto flex h-[68px] items-center justify-between gap-4 px-[72px] py-[14px] font-semibold lg:container"
  >
    <div
      class="inline-flex select-none items-center gap-4 text-[24px] leading-[140%] text-accent"
    >
      <div
        class="h-8 w-8 bg-accent"
      />
      JOD
    </div>
    <ul
      class="inline-flex items-center gap-6"
    >
      <li
        class="ml-6"
      >
        <a
          aria-label="Profile"
          class="flex h-8 w-8 items-center justify-center rounded-full bg-accent text-white"
          href="/profile"
          role="img"
          title="Jane Doe"
        >
          JD
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
